# sharkai

./: CMakeLists.txt  README.md  build.sh  sharkai.c  sharkai.h  sharkai_config.c  sharkai_config.h  sharkai_dialog.cpp  sharkai_dialog.h  sharkai_qt_bridge.cpp  sharkai_qt_bridge.h
